为博客添加分类

--- a/source/_posts/我的第一篇博客.md
+++ b/source/_posts/我的第一篇博客.md
@@ -1,12 +1,128 @@
 ---
-title: ' 我的第一篇博客'
+title: 'Mac下Hexo+GitHub-Pages搭建个人博客'
 date: 2018-04-14 17:12:06
+categories: 
+- 博客搭建
 tags:
 ---
+本文介绍了Mac下Hexo+GitHub-Pages搭建个人博客的一个完整方案，以及遇到问题时的解决办法。
+
+## 搭建步骤：
+* 安装Git
+* 安装Node.js
+* 安装Hexo
+* GitHub创建个人仓库
+* 将博客与GitHub相关联
+* 获得个人网站域名并绑定域名
+
+### 安装Git
+1. 首先介绍Git：简单说Git是开源的分布式版本控制系统，用于敏捷高效地处理项目，尤其是多人共同维护同一个项目时，我们网站本地搭建好之后需要使用Git同步到GitHub上。可以从官网下载：[Git-Downloading Package](https://git-scm.com/downloads) 选择你的电脑配置并下载。（你也可以参考这个教程[廖雪峰老师的git教程](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)）Mac下的Xcode自动集成了git，所以这步就不用做了。
+
+### 安装Node.js
+1. 因为Hexo是基于Node.js，所以必须首先安装Node.js。
+2. 进入官网下载安装包：[Node.js官网](https://nodejs.org/en/)。下载后双击按照提示安装。
+3. 注意：安装Node.js会包含环境变量及npm的安装，安装好之后检测Node.js是否安装成功，输入命令行：
+> node -v 
+
+    检测npm是否安装成功，命令行中输入：
+> npm -v
+
+**如果都没问题，那么安装Hexo的环境已经全部搭建完成。**
+### 安装Hexo
+Hexo就是我们的个人博客网站的框架，这里需要自己在电脑里创建一个文件夹，可以命名为MyBlog，Hexo框架与以后你自己发布的网页都在这个文件夹中。然后cd到这个文件夹。
+
+1. 使用npm命令安装Hexo，输入（这时的命令都在MyBlog文件夹中）：
+> npm install -g hexo-cli
+
+    这个安装时间会比较长，请耐心等待，安装好之后初始化我们的博客，输入：
+> hexo init blog
+
+2. 至此，我们的网站雏形就搭建好了，是不是很简单，下面我们大致看一下，请分别输入以下命令：
+> hexo new test_my_site
+hexo g
+hexo s
+
+然后打开浏览器输入地址：localhost:4000 就可以看到初始化的网站情况了。
+tips: 给出几个Hexo命令
+>npm install hexo -g #安装
+npm update hexo -g #升级
+hexo init #初始化博客
+> 命令简写：
+hexo n "我的博客" == hexo new "我的博客"  #新建文章
+hexo g == hexo generate #生成
+hexo s == hexo server #启动服务预览
+hexo d == hexo deploy #部署
+hexo server     #Hexo会监视文件变动并自动更新，无须重启服务器
+hexo clean #清除缓存，若是网页正常情况下可以忽略这条命令（建议每次部署前都clean一下）
+
+### GitHub创建个人仓库
+GitHub创建个人仓库比较简单，这里说下注意点：
+**创建个人仓库时的名称一定要注意：仓库的名字为XXX.github.io，XXX为自己的GitHub用户名**
+**创建个人仓库时的名称一定要注意：仓库的名字为XXX.github.io，XXX为自己的GitHub用户名**
+**创建个人仓库时的名称一定要注意：仓库的名字为XXX.github.io，XXX为自己的GitHub用户名**
+重要的事情说三遍！！！
+
+### 将博客与GitHub相关联
+1. 打开本地的MyBlog文件夹，进入blog根目录中的_config.yml配置文件，下滑到最后设置以下：
 ```
-coding string
+deploy:
+type: git
+repo: https://github.com/RiversMaJianCheng/RiversMaJianCheng.github.io.git
+branch: master
+```
+设置好之后运行：
+> npm install hexo-deployer-git –save
+hexo g
+hexo d
+
+此时就将本地静态文件推送到GitHub上了。
+可以这么验证：打开浏览器，访问：http://RiversMaJianCheng.github.io 就可以看到博客的雏形了。
+
+### 获得个人网站域名并绑定
+域名是网站的入口，也是网站的第一印象。申请域名的地方比较多，这里推荐一个大家常用的阿里云：[域名注册](https://wanwang.aliyun.com/domain/) 购买域名也是我们整个搭建过程中唯一一个需要花钱的地方。如果你有空闲的域名则无需购买，直接使用即可。
+
+1. 在blog文件夹的根目录中的source文件新建一个CNAME文件（无后缀名），然后打开输入你购买的域名:
+下面以我自己的域名举例：majiancheng.top  **注意：前面没有http://，也没有www**，然后用hexo 命令部署到github。
+2. 添加域名解析
+（1）先添加一个CNAME，主机记录写@，后面记录值写上你的RiversMaJianCheng.github.io
+（2）再添加一个CNAME，主机记录写www，后面记录值也写RiversMaJianCheng.github.io
+
+** 注：** 这样别人用www和不用www都能访问你的网站，其实www的方式会先解析成 http//RiversMaJianCheng.github.io，然后根据CNAME再变成http//majiancheng.top,即中间是经历过一次转还的。上面，我用的是CNAME别名记录，也有人使用A记录，后面的记录值是写GitHub pages里面的IP地址，但有时候IP地址会更改，导致解析不正确，所以推荐使用CANME，不建议使用IP地址。
+*************
+以上我们就基本完成了完整的Hexo+GitHub-Pages搭建个人博客是不是很简单！
+
+## 更新主题：
+1. 官方提供了一些主题，你可[以戳](https://hexo.io/themes/)我查看。这里选取最主流的[Next](https://github.com/iissnan/hexo-theme-next)主题吧。因为小众的主题会在你配置时出现一些难以忍受的问题。
+2. 安装主题，进入blog文件夹下（根目录），执行以下命令即可。
+```
+$ git clone https://github.com/iissnan/hexo-theme-next themes/next
 
 ```
+3. Hexo 有两份主要的配置文件（_config.yml）,一份位于站点根目录下，另一份位于主题目录下，为了叙述方便，在以下说明中将前者称为站点配置文件，后者称为主题配置文件。clone完成后，打开站点配置文件，找到 theme 字段，并将其值更改为next。然后验证主题是否启用。
 
-### 让我们一起搞起来
-一会我写个hexo 使用方案供大家欣赏。
+## 多电脑同步:
+思考：当重装电脑，或者在别的电脑想要发布，修改文章的时候，怎么使用之前已经搭建好的Hexo环境？
+
+我的做法：用GitHub的两个分支，一个用来存放Hexo网站源文件，一个用来发布网站（Hexo最后部署的静态文件）。
+
+1. GitHub 创建两个分支：一个master分支， 一个hexo分支。
+    master分支：本地编译好的静态文件，即博客显示的静态文件；
+    hexo分支：本地的原始程序文件，即博客的源文件；
+2. clone 库到本地一个空文件夹，此时文件夹的名字就成了RiversMaJianCheng.github.io
+3. 创建分支hexo，切换到分支hexo，将分支推送到远端，在GitHub修改默认分支为source
+4. 将之前hexo本地生成的博客的文件夹的所有文件，都拷贝到RiversMaJianCheng.github.io文件夹下的hexo分支下（当前分支要是hexo）***注*** **这里要删除主题中的Git版本管理，不然默认无法提交主题文件。**
+5. 然后执行git命令
+```
+$ git add .
+$ git commit -m "在hexo分支提交博客源文件"
+$ git push
+```
+6.分支维护（电脑要装Git和Node.js）
+（1）因为GitHub有两个分支，默认为Hexo，clone到本地（hexo 千万不要执行hexo init）
+（2）直接hexo sever 有可能 ERROR 提示执行
+```
+npm install hexo --save
+```
+（3）然后就可以正常hexo server 正常编辑了
+（4）修改文件后执行 hexo clean  和 hexo g 和 hexo d 就可以了。
+
