fix:加入相关图片

--- a/source/_posts/我的第一篇博客.md
+++ b/source/_posts/我的第一篇博客.md
@@ -27,7 +27,9 @@ tags:
     检测npm是否安装成功，命令行中输入：
 > npm -v
 
-**如果都没问题，那么安装Hexo的环境已经全部搭建完成。**
+![hexo.png](/images/hexo_node_npm.png)
+
+**如果出现类似以上的图片说明就没问题，那么安装Hexo的环境已经全部搭建完成。**
 ### 安装Hexo
 Hexo就是我们的个人博客网站的框架，这里需要自己在电脑里创建一个文件夹，可以命名为MyBlog，Hexo框架与以后你自己发布的网页都在这个文件夹中。然后cd到这个文件夹。
 
@@ -62,6 +64,8 @@ GitHub创建个人仓库比较简单，这里说下注意点：
 **创建个人仓库时的名称一定要注意：仓库的名字为XXX.github.io，XXX为自己的GitHub用户名**
 重要的事情说三遍！！！
 
+![注意](/images/hexo_install_io.png)
+***请务必遵照以上格式！***
 ### 将博客与GitHub相关联
 1. 打开本地的MyBlog文件夹，进入blog根目录中的_config.yml配置文件，下滑到最后设置以下：
 ```
@@ -83,10 +87,14 @@ hexo d
 
 1. 在blog文件夹的根目录中的source文件新建一个CNAME文件（无后缀名），然后打开输入你购买的域名:
 下面以我自己的域名举例：majiancheng.top  **注意：前面没有http://，也没有www**，然后用hexo 命令部署到github。
+![hexo-3](/images/hexo-3.png)
+![hexo-4](/images/hexo-4.png)
 2. 添加域名解析
 （1）先添加一个CNAME，主机记录写@，后面记录值写上你的RiversMaJianCheng.github.io
 （2）再添加一个CNAME，主机记录写www，后面记录值也写RiversMaJianCheng.github.io
 
+如下图：
+![hexo-5](/images/hexo-5.png)
 ** 注：** 这样别人用www和不用www都能访问你的网站，其实www的方式会先解析成 http//RiversMaJianCheng.github.io，然后根据CNAME再变成http//majiancheng.top,即中间是经历过一次转还的。上面，我用的是CNAME别名记录，也有人使用A记录，后面的记录值是写GitHub pages里面的IP地址，但有时候IP地址会更改，导致解析不正确，所以推荐使用CANME，不建议使用IP地址。
 *************
 以上我们就基本完成了完整的Hexo+GitHub-Pages搭建个人博客是不是很简单！
