--- a/source/_posts/我的第一篇博客.md
+++ b/source/_posts/我的第一篇博客.md
@@ -85,6 +85,9 @@ hexo d
 ### 获得个人网站域名并绑定
 域名是网站的入口，也是网站的第一印象。申请域名的地方比较多，这里推荐一个大家常用的阿里云：[域名注册](https://wanwang.aliyun.com/domain/) 购买域名也是我们整个搭建过程中唯一一个需要花钱的地方。如果你有空闲的域名则无需购买，直接使用即可。
 
+**将GitHub Pages地址解析到个人域名**
+> GitHub Pages 是面向用户、组织和项目开放的公共静态页面搭建托管服务，站点可以被免费托管在GItHub上，我们可以选择使用GitHub Pages 默认提供的域名github.io或者自定义域名来发布站点。为了让自己的博客看起来更正式，我将绑定自己的域名。
+
 1. 在blog文件夹的根目录中的source文件新建一个CNAME文件（无后缀名），然后打开输入你购买的域名:
 下面以我自己的域名举例：majiancheng.top  **注意：前面没有http://，也没有www**，然后用hexo 命令部署到github。
 ![hexo-3](/images/hexo-3.png)
@@ -96,7 +99,11 @@ hexo d
 如下图：
 ![hexo-5](/images/hexo-5.png)
 ** 注：** 这样别人用www和不用www都能访问你的网站，其实www的方式会先解析成 http//RiversMaJianCheng.github.io，然后根据CNAME再变成http//majiancheng.top,即中间是经历过一次转还的。上面，我用的是CNAME别名记录，也有人使用A记录，后面的记录值是写GitHub pages里面的IP地址，但有时候IP地址会更改，导致解析不正确，所以推荐使用CANME，不建议使用IP地址。
+
+3. 登录自己的GitHub，进入之前创建的仓库界面，点击setting，设置Custom domain，输入自己的域名。如下图：
+![hexo-7](/images/hexo-7.png)
 *************
+
 以上我们就基本完成了完整的Hexo+GitHub-Pages搭建个人博客是不是很简单！
 
 ## 更新主题：
