汇编博客增加

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -138,4 +138,27 @@ ARM既可以工作大段模式，也可以小段模式
 字型数据的传递（2个字节）
 ![](https://ws2.sinaimg.cn/large/006tNc79ly1fr8ygnro5bj31680kuwif.jpg)
 
+### 栈
+栈：是一种具有特殊的访问方式的存储空间（后进先出， Last In Out Firt，LIFO）
+![](https://ws2.sinaimg.cn/large/006tNc79ly1fr9dr8qrv0j315c0bkt9m.jpg)
+```
+8086会将CS作为代码段的段地址，将CS:IP指向的指令作为下一条需要取出执行的指令
+8086会将DS作为数据段的段地址，mov ax,[address]就是取出DS:address的内存数据放到ax寄存器中
+8086会将SS作为栈段的段地址，任意时刻，SS:SP指向栈顶元素
+8086提供了PUSH（入栈）和POP （出栈）指令来操作栈段的数据
+比如push ax是将ax的数据入栈，pop ax是将栈顶的数据送入ax
+```
+push AX：流程图
+![](https://ws4.sinaimg.cn/large/006tNc79ly1fr9efpt4o2j313y0nan1k.jpg)
+
+pop AX：流程图
+![](https://ws1.sinaimg.cn/large/006tNc79ly1fr9egm2bpxj316k0na782.jpg)
+
+在8086CPU中，push和pop操作的数据都是2个字节
+push和pop指令格式：
+![](https://ws2.sinaimg.cn/large/006tNc79ly1fr9elqy7dcj313q0kejv5.jpg)
+
+
+
+
 
