汇编基础文章的修改和添加新内容

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -9,11 +9,11 @@ tags:
 ![](https://ws2.sinaimg.cn/large/006tNc79ly1fr8ocd3f13j314u0d0tab.jpg)
 1. 汇编语言与机器语言是一一对应的关系，每一条机器指令都有与之对应的汇编指令
 2. 汇编语言可以通过编译得到机器语言，机器语言可以通过反汇编得到汇编语言
-3. 高级语言可以通过编译得到汇编语言或机器语言，反过来几步不可能还原
+3. 高级语言可以通过编译得到汇编语言或机器语言，反过来几乎不可能还原
 
 ### 汇编语言的特点
 1. 可以直接访问、控制各种硬件设备，比如存储器、CPU等，能够最大限度地发挥硬件的功能
-2. 汇编指令是机器指令的助记符，同机器指令一一对应。没一种CPU都有自己的机器指令集\汇编指令集。所以汇编语言不具备可移植性
+2. 汇编指令是机器指令的助记符，同机器指令一一对应。每一种CPU都有自己的机器指令集\汇编指令集。所以汇编语言不具备可移植性
 3. 知识点过多，开发者需要对CPU等硬件结构有所了解，不易于编写、调试和维护
 4. 不区分大小写，mov和MOV是一样的
 
@@ -27,7 +27,8 @@ ARM汇编（嵌入式，iOS设备）
 **注：本文讨论的是8086汇编（结构简单，比较经典）**
 
 我们的软件或者程序都是存储在硬盘中，运行时装载在内存上，CPU通过读取内存中的指令进行控制计算机
-其中最为关键的是要了解CPU和内存，因为汇编语言绝大部分指令都是与这两个相关的
+其中最为关键的是要了解CPU和内存，因为汇编语言绝大部分指令都是与这两个相关的如下图：
+![](https://ws3.sinaimg.cn/large/006tKfTcly1frbz6hm77cj31iu0csjt2.jpg)
 下面了解一些基本概念：
 ### 总线
 1. 每一个CPU芯片都有许多管脚，这些管脚和总线相连，CPU通过总线与外部器件进行交互
@@ -38,6 +39,7 @@ ARM汇编（嵌入式，iOS设备）
 地址总线
 > 它的宽度决定了CPU的寻址能力
 > 8086的地址总线宽度是20，所以寻址能力是1M（2^20）
+**注：8086CPU地址总线20位，作用是来指定存储器单元，每个内存单元是1byte，所以地址总线决定了CPU寻址能力。计算方法为2^n(n为总线位数)。**
 
 数据总线
 > 它的宽度决定了CPU的单次数据传送量，也就是数据传送速度
@@ -126,6 +128,16 @@ mov al, [0]
 字型数据的传递（2个字节）
 ![](https://ws3.sinaimg.cn/large/006tNc79ly1fr8xcumsy8j31fe0noqfh.jpg)
 
+**jmp指令**
+```
+CPU从何处执行指令是由CS，IP的内容决定的，我们可以通过改变CS、IP的内容来控制CPU执行目标指令
+8086提供了一个mov指令（传送指令），可以用来修改大部分寄存器的值，比如
+ mov ax, 10、mov bx, 20、mov cx, 30、mov dx, 40
+但是，mov指令不能用于设置CS、IP的值，8086没有提供这样的功能
+8086提供了另外的指令来修改CS、IP的值，这些指令统称为转移指令，最简单的jmp指令
+jmp 2AE3:3,执行后：CS=2AE3H，IP=0003H，CPU将从2AE33H处读取指令。
+```
+**“jmp 段地址：偏移地址” 指令的功能为：用指令中给出的段地址修改CS，偏移地址修改IP**
 ### 大小端
 大端模式，是指数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址中（高低\低高） (Big Endian)
 小端模式，是指数据的高字节保存在内存的高地址中，而数据的低字节保存在内存的低地址中（高高\低低） (Little Endian)
@@ -158,7 +170,13 @@ pop AX：流程图
 push和pop指令格式：
 ![](https://ws2.sinaimg.cn/large/006tNc79ly1fr9elqy7dcj313q0kejv5.jpg)
 
+**注意：使用栈时，最需要注意的是栈顶越界的问题，这里尤其是需要注意的是递归调用，或者函数嵌套调用太多都会导致这个问题（将函数转成汇编就很容易看出来）**
 
-
-
+## 段的总结
+> 我们可以用一个段存放数据，将它称为“数据段”，同理存放代码的段定义为“代码段”，也可以用一个段当做栈，将它定义为“栈段”。
+```
+对于数据段：将它的段地址放在DS中，用mov，add，sub等访问内存单元的指令时，CPU就将我们定义的数据段中的内容当做数据段来访问
+对于代码段：将它的段地址放在CS中，将段中第一条指令的偏移地址放在IP中，这样CPU就将执行我们定义的代码段中的指令。
+对于栈段：将它的段地址放在SS中，将栈顶单元的偏移地址放在SP中，这样CPU在需要进行栈操作的时候，比如执行push、pop指令等，就将我们定义的栈段当做栈空间来用。
+```
 
