汇编增加内容

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -179,4 +179,28 @@ push和pop指令格式：
 对于代码段：将它的段地址放在CS中，将段中第一条指令的偏移地址放在IP中，这样CPU就将执行我们定义的代码段中的指令。
 对于栈段：将它的段地址放在SS中，将栈顶单元的偏移地址放在SP中，这样CPU在需要进行栈操作的时候，比如执行push、pop指令等，就将我们定义的栈段当做栈空间来用。
 ```
+## 程序
+退出程序：
+![](https://ws4.sinaimg.cn/large/006tKfTcly1frc5dg0azej31ii0jmjts.jpg)
+
+```
+常见中断
+int 10h用于执行BIOS中断
+int 3是“断点中断”，用于调试程序
+int 21h用于执行DOS系统功能调用，AH寄存器存储功能号
+
+```
+loop指令
+> loop指令和cx配合使用，用于循环执行重复的操作，类似于高级语言中的for、while循环
+
+![](https://ws3.sinaimg.cn/large/006tKfTcly1frc5q538v6j31180fs75j.jpg)
+
+> loop指令的执行流程
+1）让cx的值 -1，即 cx = cx - 1
+2）判断cx的值
+> 如果不为0，转至标号处执行程序，然后重复1）
+> 如果为0则执行loop后面的代码
+![](https://ws4.sinaimg.cn/large/006tKfTcly1frc5v3n5tuj30rw0gg3zx.jpg)
+
+
 
