汇编增加代码 call ret 和代码段

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -180,9 +180,14 @@ push和pop指令格式：
 对于栈段：将它的段地址放在SS中，将栈顶单元的偏移地址放在SP中，这样CPU在需要进行栈操作的时候，比如执行push、pop指令等，就将我们定义的栈段当做栈空间来用。
 ```
 ## 程序
-退出程序：
+一个有意义的汇编程序中，至少有一个段作为代码段存放代码，segment和ends的作用是定义一个段，segment代表一个段的开始，ends代表一个段的结束，使用格式如下：
+```
+段名 segment
+    ...
+段名 ends
+```
+### 退出程序以及相关代码段：
 ![](https://ws4.sinaimg.cn/large/006tKfTcly1frc5dg0azej31ii0jmjts.jpg)
-
 ```
 常见中断
 int 10h用于执行BIOS中断
@@ -190,6 +195,108 @@ int 3是“断点中断”，用于调试程序
 int 21h用于执行DOS系统功能调用，AH寄存器存储功能号
 
 ```
+代码段中存放代码
+```
+assume cs:code
+code segment
+    db 55h, 66h, 77h, 88h
+    db 10 dup(22) :重复定义10个，22
+:程序入口开始
+start:
+    mov ax, cs:[0]
+    mov bx, cs:[2]
+    :推出程序
+    mov ax, 4c00h
+    int 21h
+code ends
+
+:程序入口在start
+end start
+```
+打印字符串代码
+```
+assume cs:code, ds:data : 这是给开发者看的，屁用没有
+: -----数据段 开始------
+data segment
+    : db 'Hello World!$'  : $  代表字符串的结束
+    age db 20h
+    no dw 30h
+    db 10 dup(6)
+    string  db 'Hello World!$'  : $  代表字符串的结束
+data ends
+: -----数据段 结束------
+
+: -----代码据段 开始------
+code segment
+start:
+    :设置ds的值
+    mov ax, data
+    mov ds, ax  : DS:DX=串地址 '$'结束字符串
+    
+    mov ax, no
+    mov bh, age
+    
+    : 打印字符串
+    mov dx, offset string : offset string 代表string的偏移地址
+    mov ah, 9h : ah = 9h 代表显示字符串
+    int 21h
+    
+    : 推出程序
+    mov ax, 4c00h
+    int 21h
+code ends
+end start
+```
+全局变量在编译时就确定了内存地址。
+
+### call和ret指令
+call：相当于调用，将下一条指令的偏移地址入栈后，转到标号处执行指令
+ret：代表return的意思，将栈顶的值出栈，赋值给ip
+```
+assume cs:code, ds:data, ss:stack
+
+: 栈段
+stack segment
+    db 100 dup(10)
+stack ends
+
+: 数据段
+data segment
+    db 100 dup(0)
+    string db 'Hello!$'
+data ends
+
+: 代码段
+code segment
+start:
+    : 手动设置ds， ss的值
+    mov ax, data
+    mov ds, ax
+    mov ax, stack
+    mov ss, ax
+    
+    : 业务逻辑
+    call print
+    
+    mov ax, 1122h
+    mov bx, 3344h
+    add ax, bx
+    : 退出
+    mov ax, 4c00h
+    int 21h
+    
+:打印字符串
+print:
+    : ds：dx 告知字符串地址
+    mov dx, offset string
+    mov ah, 9h
+    int 21h
+    
+    ret : 调用此之后跳到调用这个方法的下一个地址
+code ends
+start end
+```
+
 loop指令
 > loop指令和cx配合使用，用于循环执行重复的操作，类似于高级语言中的for、while循环
 
