汇编增加代码

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -262,6 +262,7 @@ stack ends
 
 : 数据段
 data segment
+    a dw 0
     db 100 dup(0)
     string db 'Hello!$'
 data ends
@@ -276,7 +277,15 @@ start:
     mov ss, ax
     
     : 业务逻辑
-    call print
+    call mathFunc
+    mov bx, [0]
+    
+    call mathFunc2
+    mov bx, a
+    
+    call mathFunc3
+    mov bx, ax
+    
     
     mov ax, 1122h
     mov bx, 3344h
@@ -285,16 +294,176 @@ start:
     mov ax, 4c00h
     int 21h
     
-:打印字符串
-print:
+: 返回2的3次方
+: 返回值放到ds:0 中
+: 打印字符串
+mathFunc:
     : ds：dx 告知字符串地址
-    mov dx, offset string
-    mov ah, 9h
-    int 21h
     
-    ret : 调用此之后跳到调用这个方法的下一个地址
+    mov ax, 2
+    add ax, ax
+    add ax, ax
+    mov [0], ax
+    
+    : 打印字符串
+    : mov dx, offset string
+    : mov ah, 9h
+    : int 21h
+    ret : 调用此之后跳到调用这个方法的下一个地址,有push操作
+    
+: 返回2的3次方
+: 返回值放到a中
+mathFunc2:
+    mov ax, 2
+    add ax, ax
+    add ax, ax
+    
+    mov a, ax
+    ret
+
+: 返回2的3次方
+: 返回值放到ax寄存器中
+mathFunc3:
+    mov ax, 2
+    add ax, ax
+    add ax, ax
+    : 直接将数据放入寄存器是最快的方法
+    ret
+
 code ends
 start end
+```
+### 传参以及栈平衡
+栈平衡: 函数调用前后的栈顶指针要一致
+```
+assume cs:code, ds:data, ss:stack
+
+: 栈段
+stack segment
+db 100 dup(10)
+stack ends
+
+: 数据段
+data segment
+a dw 0
+db 100 dup(0)
+string db 'Hello!$'
+data ends
+
+: 代码段
+code segment
+start:
+    : 手动设置ds， ss的值
+    mov ax, data
+    mov ds, ax
+    mov ax, stack
+    mov ss, ax
+
+    : 业务逻辑
+    /*
+    mov cx, 10h
+    mov dx, 20h
+    call sum1
+    */
+    
+    /*
+    mov word ptr [0], 1122h
+    mov word ptr [2], 2233h
+    call sum2
+    */
+    
+    : 这里有个问题如果push太多的话,会使得栈内存泄露,不再平衡
+    push 1122h
+    push 2233h
+    call sum3
+    add sp,4 : 恢复栈平衡,sp栈顶指针加4个字节
+    
+    : 退出
+    mov ax, 4c00h
+    int 21h
+: 返回值放ax寄存器中
+: 传递2个参数(放入栈中)
+sum3:
+    : 访问栈中的参数
+    mov bp, sp
+    mov ax, ss:[bp+2]
+    add ax, ss:[bp+4]
+    ret
+    
+ 
+ : 返回值放ax寄存器中
+ : 传递2个参数(分别放ds:0,ds:2中)
+ sum2:
+     mov ax, [0]
+     add ax, [2]
+     ret
+ 
+: 返回值放ax寄存器中
+: 传递2个参数(分别放cx,dx中)
+sum1:
+    mov ax, cx
+    add ax, dx
+    ret
+
+code ends
+end start
+```
+函数调用函数 ,这里演示递归调用如果嵌套过多的话就会导致栈溢出,程序崩溃
+```
+assume cs:code, ds:data, ss:stack
+
+: 栈段
+stack segment
+db 100 dup(10)
+stack ends
+
+: 数据段
+data segment
+a dw 0
+db 100 dup(0)
+string db 'Hello!$'
+data ends
+
+: 代码段
+code segment
+start:
+    : 手动设置ds， ss的值
+    mov ax, data
+    mov ds, ax
+    mov ax, stack
+    mov ss, ax
+
+    : 业务逻辑
+    push 1122h
+    push 3344h
+    call sum
+    add sp, 4
+    
+    : 退出
+    mov ax, 4c00h
+    int 21h
+
+: 返回值放ax寄存器中
+: 传递2个参数(放入栈中)
+sum:
+    mov bp, sp
+    mov ax, ss:[bp+2]
+    add ax, ss:[bp+4]
+    
+    push 1122h
+    push 3344h
+    call minus
+    add sp, 4
+    
+    ret
+
+minus:
+    mov bp, sp
+    mov ax, ss:[bp+2]
+    add ax, ss:[bp+4]
+    ret
+code ends
+end start
 ```
 
 loop指令
