栈平衡中的局部变量和函数嵌套平衡

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -437,7 +437,7 @@ start:
     push 1122h
     push 3344h
     call sum
-    add sp, 4
+    add sp, 4 : 外平栈
     
     : 退出
     mov ax, 4c00h
@@ -455,16 +455,39 @@ sum:
     call minus
     add sp, 4
     
-    ret
+    ret 4 :内平栈  ,外平栈和内平栈只用一个就好
 
 minus:
+    : 访问栈中的参数
+    push bp
     mov bp, sp
-    mov ax, ss:[bp+2]
-    add ax, ss:[bp+4]
+    sub sp, 10 : 预留10个字节的空间给局部变量
+    
+    : 定义两个局部变量
+    mov word ptr ss:[bp-2], 3
+    mov word ptr ss:[bp-4], 4
+    mov ax, ss:[bp-2]
+    add ax, ss:[bp-4]
+    mov ss:[bp-6], ax
+    
+    mov ax, ss:[bp+4]
+    add ax, ss:[bp+6]
+    add ax , ss[bp-6]
+    
+    : 恢复 sp
+    mov sp, bp
+    : 恢复 bp
+    pop bp
+    
     ret
 code ends
 end start
 ```
+函数调用的本质:
+1. 参数:push参数值
+2. 返回值,返回值存放ax中
+3. 栈平衡
+
 
 loop指令
 > loop指令和cx配合使用，用于循环执行重复的操作，类似于高级语言中的for、while循环
