汇编实现代码

--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -459,10 +459,12 @@ sum:
 
 minus:
     : 访问栈中的参数
+    : 存储bp
     push bp
     mov bp, sp
     sub sp, 10 : 预留10个字节的空间给局部变量
     
+    : ---业务逻辑 begain------
     : 定义两个局部变量
     mov word ptr ss:[bp-2], 3
     mov word ptr ss:[bp-4], 4
@@ -470,9 +472,11 @@ minus:
     add ax, ss:[bp-4]
     mov ss:[bp-6], ax
     
+    : 访问栈中的参数
     mov ax, ss:[bp+4]
     add ax, ss:[bp+6]
     add ax , ss[bp-6]
+    : ---业务逻辑 begain------
     
     : 恢复 sp
     mov sp, bp
