--- a/source/_posts/汇编基础学习.md
+++ b/source/_posts/汇编基础学习.md
@@ -464,6 +464,26 @@ minus:
     mov bp, sp
     sub sp, 10 : 预留10个字节的空间给局部变量
     
+    : 保护可能会用到的寄存器
+    push si
+    push di
+    push bx
+    
+    : 为了防止其他访问到未赋值的局部变量地址,而这个地址为非法值,进行填充
+    
+    : 给局部变量填充 int 3 (cccc) 中断程序
+    mov ax, 0cccch
+    : 让es等于 ss
+    mov bx, ss
+    mov es, bx
+    : 让di 等于bp - 10 (局部变量地址最小的区域)
+    mov di, bp
+    sub di, 10
+    : cx 决定了stosw的执行次数
+    mov cx, 5
+    rep stosw
+    : rep的作用,重复执行某个指令(执行的次数由cx决定)
+    
     : ---业务逻辑 begain------
     : 定义两个局部变量
     mov word ptr ss:[bp-2], 3
@@ -478,6 +498,11 @@ minus:
     add ax , ss[bp-6]
     : ---业务逻辑 begain------
     
+    // 恢复寄存器的值
+    pop bx
+    pop di
+    pop si
+    
     : 恢复 sp
     mov sp, bp
     : 恢复 bp
@@ -491,6 +516,23 @@ end start
 1. 参数:push参数值
 2. 返回值,返回值存放ax中
 3. 栈平衡
+
+**函数调用的流程(内存)**
+> 1.push 参数
+> 2.push 函数的返回地址
+> 3.push bp (保留bp之前的值,方便以后的恢复)
+> 4.mov bp, sp (保留sp之前的值,方便以后恢复)
+> 5.sub sp, 空间大小 (分配空间给局部变量)
+> 6.保护可能要用到的寄存器
+> 7. 使用CC(int 3)填充局部变量的空间
+
+> 8.========执行业务逻辑=========
+
+> 9.恢复寄存器之前的值
+> 10.mov sp, bp (恢复sp之前的值)
+> 11.pop bp (恢复bp之前的值)
+> 12.ret (将函数的返回值地址出栈,执行下一条指令)
+> 13. 恢复栈平衡 (add sp, 参数所占的空间)
 
 
 loop指令
