--- a/source/_posts/常见基本算法.md
+++ b/source/_posts/常见基本算法.md
@@ -144,5 +144,5 @@ for (NSInteger i = 0; i < array.count ; i++) {
 }
 
 ```
-## demo地址
+## [demo地址](https://github.com/RiversMaJianCheng/blogDemo)
 
