add:数据结构的增加

--- a/source/_posts/数据结构基础.md
+++ b/source/_posts/数据结构基础.md
@@ -66,4 +66,35 @@ tags:
 ## 线性表
 定义：零个或多个数据元素的有限序列。
 **若将线性表记为（a1,…,ai-1,ai,ai+1,…an）,则表中ai-1领先于ai,ai领先于ai+1,称ai-1是ai的直接前驱元素,ai+1是ai的直接后继元素。**
+###  顺序存储的定义：线性表的顺序存储结构，指的是用一段地址连续的存储单元依次存储线性表的数据元素。
 
+线性表在存，读取数据时，不管哪个位置，时间复杂的都是O(1)，而插入或删除时时间复杂的都是O(n)。因为要移动后面的元素。
+优点：无须为表示表中元素之间的逻辑关系而增加额外的存储空间；可以快速地存取表中任一位置的元素。
+缺点：插入和删除操作需要移动大量元素；当线性表长度变化较大时，难以确定存储空间的容量；造成存储空间的“碎片”。
+> 以上的存的意思是：存其实就是给线性表的任何位置赋值：如：a[4] = 23; 而插入是在第i个位置插入一个元素。那么它之后的元素都要后移一位；
+造成碎片的原因是我们初始化数组大小的时候造成的。
+
+### 线性表的链式存储结构
+
+为了表示每个数据元素ai与其直接后继元素ai+1之间的逻辑关系，对数据元素ai来说，除了存储其本身的信息之外，还需要存储一个指示其直接后继的信息（即直接后继的存储位置）。我们把存储数据元素信息的域称为数据域，把存储直接后继位置的域称为指针域。指针域中存储的信息称做指针或链。这两部分信息组成数据元素ai的存储映像，称为结点（Node）。
+n个结点（ai的存储映像）链结成一个链表，即为线性表（a1，a2，...，an）的链式存储结构，因为此链表的每个结点只包含一个指针域，所以叫做单链表。如下图：
+![](https://ws1.sinaimg.cn/large/006tKfTcly1fskxlpugb4j30xy098js9.jpg)
+![](https://ws4.sinaimg.cn/large/006tKfTcly1fskxmsfyekj310w07sjsk.jpg)
+![](https://ws3.sinaimg.cn/large/006tKfTcly1fskxrsnh3cj30rq0e4tbh.jpg)
+单链表插入或者删除的时间复杂度主要消耗在查找上，它不像顺序存储根据下标能够直接查找的位置，它需要遍历指针，当i=n时需要遍历n-1次才可以，所以最坏的情况是O(n)。就单单插入和删除其实只是简单的赋值移动指针而已，其他的数据根本不需要移动，所以时间复杂度是O(1)。
+
+单链表的插入如下图：
+![](https://ws1.sinaimg.cn/large/006tKfTcly1fsl3e09gj9j30ya098jrt.jpg)
+s->next = p->next; p->next = s;
+如下图所示：
+![](https://ws3.sinaimg.cn/large/006tKfTcly1fsl3co5r3pj30z008674o.jpg)
+
+单链表的删除如下图：
+![](https://ws4.sinaimg.cn/large/006tKfTcly1fsl3g9f7qrj311c088751.jpg)
+p->next = p->next->next;
+
+总结如下图：
+![](https://ws2.sinaimg.cn/large/006tKfTcly1fsl3i0owucj30z80a6n0k.jpg)
+
+### 单链表结构与顺序存储结构优缺点
+![](https://ws2.sinaimg.cn/large/006tKfTcly1fsl3ppgey7j31040hmtcm.jpg)
