链表的初步完善

--- a/source/_posts/数据结构基础.md
+++ b/source/_posts/数据结构基础.md
@@ -98,3 +98,18 @@ p->next = p->next->next;
 
 ### 单链表结构与顺序存储结构优缺点
 ![](https://ws2.sinaimg.cn/large/006tKfTcly1fsl3ppgey7j31040hmtcm.jpg)
+
+### 静态链表
+静态链表是对于一些没有指针的高级语言而言的。首先我们让数组的元素都是由两个数据域组成，data和cur。数组的每个下标都对应一个data和一个cur。数据域data，用来存放数据元素，也就是通常我们要处理的数据；而游标cur相当于单链表中的next指针，存放该元素的后继在数组中的下标。我们把这种用数组描述的链表叫做静态链表，这种描述方法也叫游标实现法。
+
+静态链表的优缺点：
+![](https://ws2.sinaimg.cn/large/006tKfTcly1fsvibww001j30zo0c476g.jpg)
+
+### 循环链表
+将单链表中终端结点的指针端由空指针改为指向头结点，就使整个单链表形成一个环，这种头尾相接的单链表称为单循环链表，简称循环链表。
+
+循环链表解决了一个很麻烦的问题：就是从当中任一个结点出发都能访问到链表的全部结点。
+
+### 双向链表
+在单链表中，有了next指针，这就使得我们要查找下一结点的时间复杂度为O(1),可以如果我们要查找的是上一结点的话，那最坏的时间复杂度就是O(n)了，因为我们每次都要从头开始遍历查找。
+为了克服单向性这一缺点，我们设计出了双向链表，双向链表是在单链表的每个结点中，再设置一个指向其前驱结点的指针域。所以在双向链表中的结点都有两个指针域，一个指向直接后继，另一个指向直接前驱。
