--- a/source/_posts/数据结构基础.md
+++ b/source/_posts/数据结构基础.md
@@ -113,3 +113,6 @@ p->next = p->next->next;
 ### 双向链表
 在单链表中，有了next指针，这就使得我们要查找下一结点的时间复杂度为O(1),可以如果我们要查找的是上一结点的话，那最坏的时间复杂度就是O(n)了，因为我们每次都要从头开始遍历查找。
 为了克服单向性这一缺点，我们设计出了双向链表，双向链表是在单链表的每个结点中，再设置一个指向其前驱结点的指针域。所以在双向链表中的结点都有两个指针域，一个指向直接后继，另一个指向直接前驱。
+
+## 栈与队列
+
