--- a/source/_posts/数据结构基础.md
+++ b/source/_posts/数据结构基础.md
@@ -115,4 +115,6 @@ p->next = p->next->next;
 为了克服单向性这一缺点，我们设计出了双向链表，双向链表是在单链表的每个结点中，再设置一个指向其前驱结点的指针域。所以在双向链表中的结点都有两个指针域，一个指向直接后继，另一个指向直接前驱。
 
 ## 栈与队列
+### 栈
+栈是限定仅在表尾进行插入和删除操作的线性表。我们把允许插入和删除的一端称为栈顶，另一端称为栈底，不含任何数据元素的栈称为空栈。栈又称为后进先出的线性表，简称LIFO结构。
 
