fix:增加代码高亮提示

--- a/source/_posts/常见基本算法.md
+++ b/source/_posts/常见基本算法.md
@@ -10,7 +10,7 @@ tags:
 2. 选择排序是先选一个基准点,然后遍历进行和这个基准点进行比较,进行排序交换.
 
 ### 冒泡排序:
-```
+```objc
 NSArray *array = @[@5,@7,@2,@1,@9,@6];
 ```
 如下图:
@@ -20,7 +20,7 @@ NSArray *array = @[@5,@7,@2,@1,@9,@6];
 然后这么一直遍历下去,结果三次遍历就完成了整个排序.
 核心代码:
 
-```
+```objc
 for (NSInteger i = 0; i < array.count ; i++) {
     //这是每次找到最大值放在最后,相邻两个数据进行比较,这个是冒泡排序
     for (NSInteger j = 0; j < array.count - i - 1; j++) {
@@ -35,7 +35,7 @@ for (NSInteger i = 0; i < array.count ; i++) {
 ![](https://ws4.sinaimg.cn/large/006tKfTcly1fsbveuwmoaj30yw0imjul.jpg)
 选择排序,用第一个数据依次和后面的数据进行对比,如果小于比较的数据就进行交换,然后再以交换后的数据再次进行未对比的数据进行对比.看上图应该比较好理解,就不多说了.
 核心代码:
-```
+```objc
 for (NSInteger i = 0; i < array.count ; i++) {
     //每次找到最小的放最前,这个是选择排序
         for (NSInteger k = i + 1; k < array.count; k++) {
@@ -50,7 +50,7 @@ for (NSInteger i = 0; i < array.count ; i++) {
 如下图:
 ![](https://ws1.sinaimg.cn/large/006tKfTcly1fsbwu2fpexj30z6154adb.jpg)
 核心代码:
-```
+```objc
 - (void)quickSortArray:(NSMutableArray *)array leftIndex:(NSInteger)leftIndex rightIndex:(NSInteger)rightIndex{
     if (leftIndex > rightIndex) {
         return;
@@ -89,7 +89,7 @@ for (NSInteger i = 0; i < array.count ; i++) {
 步骤二: 将堆顶元素与末尾元素进行交换，使末尾元素最大。然后继续调整堆，再将堆顶元素与末尾元素交换，得到第二大元素。如此反复进行交换、重建、交换。
 
 核心代码:
-```
+```objc
 /**
 堆排序
 
