修改完善hexo步骤

--- a/source/_posts/我的第一篇博客.md
+++ b/source/_posts/我的第一篇博客.md
@@ -138,6 +138,17 @@ $ git push
 ```
 npm install hexo --save
 ```
+如果还有错误可以按照提示执行，提示很清楚的。
 （3）然后就可以正常hexo server 正常编辑了
-（4）修改文件后执行 hexo clean  和 hexo g 和 hexo d 就可以了。
+接着创建新的博客
+```
+ hexo new "title"
+```
+（4）修改文件后执行下面的命令
+```
+ hexo clean  
+ hexo g 
+ hexo d 
+```
+然后就部署到服务器了。
 
